# TeleTalk-AI-Agent

./: .env  Dockerfile  README.md  agent.py  client.py  main.py  pyproject.toml  server.py  streams.xml
utils/: botss.py  daily_helpers.py
